# TwintailLauncher

./: .gitignore  README.md  app.twintaillauncher.ttl.metainfo.xml  index.css  index.html  keqinglauncher.desktop  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  twintaillauncher.desktop  vite.config.ts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  game-request.md
.github/workflows/: build.yml  main.yml  publish.yml  update-aur-bin.yml  update-aur-git.yml  update-aur-stable-src.yml  update-aur.yml  update-copr.yml  update-winget.yml  winget-release.yml
.run/: build_linux.run.xml  build_native.run.xml  build_windows.run.xml  dev_tauri.run.xml
src/: App.css  App.tsx  main.tsx  utils.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: krpatchz  reaper  winetricks
src-tauri/resources/locales/: de_DE.json  en_NEKO.json  en_US.json  uk_UA.json  zh_Hans_CN.json  zh_Hant_HK.json  zh_Hant_TW.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: install.rs  manifest.rs  mod.rs  network.rs  queue.rs  repository.rs  runners.rs  settings.rs
src-tauri/src/downloading/: connection_monitor.rs  download.rs  misc.rs  mod.rs  preload.rs  queue.rs  repair.rs  update.rs
src-tauri/src/utils/: args.rs  db_manager.rs  discord_rpc.rs  game_launch_manager.rs  git_helpers.rs  gpu.rs  mod.rs  models.rs  repo_manager.rs  shortcuts.rs  system_tray.rs
src/components/: AppLoadingScreen.tsx  GameButton.tsx  InstallContextMenu.tsx  SidebarCommunity.tsx  SidebarIcon.tsx  SidebarIconInstall.tsx  SidebarIconManifest.tsx  SidebarManifests.tsx  SidebarRepos.tsx  SidebarSettings.tsx
src/components/common/: BackgroundControls.tsx  CachedImage.tsx  CheckBox.tsx  CollapsableTooltip.tsx  Dialog.tsx  FolderInput.tsx  HelpTooltip.tsx  PreloadButton.tsx  ProgressBar.tsx  SelectMenu.tsx  SettingsComponents.tsx  Skeleton.tsx  SubMenu.tsx  TTLVersion.tsx  TextDisplay.tsx  TextInput.tsx  TextInputPart.tsx  TooltipIcon.tsx
src/components/layout/: ActionBar.tsx  BackgroundLayer.tsx  DialogEventHandler.tsx  DialogOverlay.tsx  DownloadProgress.tsx  GameInfoOverlay.tsx  ManifestsPanel.tsx  PlayStatsOverlay.tsx  PopupOverlay.tsx  SettingsLayout.tsx
src/components/pages/: DownloadsPage.tsx  PAGES.ts  PageViewContainer.tsx  RunnersPage.tsx  SettingsPage.tsx
src/components/popups/: AddRepo.tsx  DownloadGame.tsx  GameSettings.tsx  POPUPS.ts
src/components/popups/addrepo/: AddRepo.tsx
src/components/popups/repomanager/: AddRepo.tsx  RepoManager.tsx  RepoManifestCombo.tsx  RepoManifestItem.tsx
src/components/popups/runnermanager/: RunnerItem.tsx  RunnerManager.tsx  RunnerManifestCombo.tsx
src/components/popups/settings/: CheckBox.tsx  FolderInput.css  FolderInput.tsx  FpsUnlockSettings.tsx  InstallDeleteConfirm.tsx  MangoHudSettings.tsx  SettingsGlobal.tsx  SettingsInstall.tsx  SettingsManager.tsx  TextInput.tsx  TextInputPart.css  TextInputPart.tsx  XXMISettings.tsx
src/components/sidebar/: SettingsSidebar.tsx  SidebarCommunity.tsx  SidebarDownloads.tsx  SidebarIconInstall.tsx  SidebarIconManifest.tsx  SidebarLink.tsx  SidebarManifests.tsx  SidebarRepos.tsx  SidebarRunners.tsx  SidebarSettings.tsx
src/constants/: events.ts
src/context/: DialogContext.tsx
src/services/: dialogEvents.ts  events.ts  loader.ts
src/styles/: tokens.ts
src/types/: downloadQueue.ts
src/utils/: determineButtonType.ts  events.ts  i18n.ts  imagePreloader.ts  progress.ts
