[package]
name = "twintaillauncher"
version = "1.0.4"
description = "A multi-platform launcher for your anime games"
authors = ["TukanDev"]
edition = "2024"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "twintaillauncher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["sync"] }
# NOTE: Keep 0.7.4 as fixed version
sqlx = { version = "0.7.4", features = ["sqlite", "json", "time", "runtime-tokio"] }
serde_json = "1"
git2 = "0.20"
cuid2 = "0.1"
linked-hash-map = "0.5.6"
futures-core = "0.3"
# Main library to handle downloads and comaptibility
fischl = { git = "https://github.com/TwintailTeam/fischl-rs.git", branch = "master", features = ["compat", "download"] }

# tauri plugins
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
