[package]
name = "twintaillauncher"
version = "2.3.0-cef"
description = "A multi-platform launcher for your anime games"
authors = ["TwintailTeam"]
edition = "2024"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "twintaillauncher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { git = "https://github.com/tauri-apps/tauri", branch = "feat/cef", features = [] }#{ version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", default-features = false, features = ["unstable", "common-controls-v6", "compression", "tray-icon", "image-ico", "image-png", "cef"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.52", features = ["sync"] }
sqlx = { version = "0.9.0", features = ["sqlite", "json", "time", "runtime-tokio"] }
serde_json = "1"
cuid2 = "0.1"
gumdrop = "0.8.1"
fischl = { git = "https://github.com/TwintailTeam/fischl-rs.git", branch = "master", features = ["compat", "download"] }
git2 = { version = "0.21", features = ["https", "vendored-libgit2", "vendored-openssl"] }
steam_shortcuts_util = "1.1.8"
rpcdiscord = { git = "https://github.com/TukanDev/rpcdiscord.git", branch = "main" }
keepawake = "0.6.0"
log = "0.4.32"

# tauri plugins
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }#"2.8.0"
tauri-plugin-dialog = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }#"2.7.1"
tauri-plugin-opener = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }#"2.5.4"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }#"2.4.2"
tauri-plugin-clipboard-manager = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }#"2.3.2"

[patch.crates-io]
tauri = { git = "https://github.com/tauri-apps/tauri", branch = "feat/cef" }
tauri-plugin = { git = "https://github.com/tauri-apps/tauri", branch = "feat/cef" }

# Fuck NVIDIA btw
[target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
wgpu = { version = "27.0.1", default-features = false, features = ["vulkan"] }

[target."cfg(any(target_os = \"windows\"))".dependencies]
shortcuts-rs = "1.1.1"

[profile.dev]
opt-level = 1
incremental = true
overflow-checks = false

[profile.dev.package."*"]
opt-level = 3

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
overflow-checks = false
